# AAMParallelFitting

./: .gitignore  CMakeLists.txt  README.md
aamlibrary/src/: AAM_Basic.cpp  AAM_Basic.h  AAM_CAM.h  AAM_PAW.cpp  AAM_PAW.h  AAM_PDM.cpp  AAM_PDM.h  AAM_Shape.cpp  AAM_Shape.h  AAM_TDM.cpp  AAM_TDM.h  AAM_Util.cpp  AAM_Util.h  Makefile  VJfacedetect.cpp  cmake_install.cmake
doc/: AAM_OpenMP.pptx
src/: AAM_Parallel.cpp  AAM_Parallel.h  CMakeLists.txt  Makefile  cmake_install.cmake  evaluation.cpp  fit.cpp  train.cpp
